--- a/package.json
+++ b/package.json
@@ -9,19 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
+    "next": "14.0.1",
+    "next-reveal": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-photo-album": "^2.3.0",
+    "react-player": "^2.13.0",
+    "react-redux": "^8.1.3",
+    "react-tweet": "^3.1.1",
+    "smooth-scrollbar": "^8.8.4",
+    "usehooks-ts": "^2.9.1",
+    "yet-another-react-lightbox": "^3.15.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/aos": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/scrollreveal": "^0.0.10",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.1"
+    "typescript": "^5"
   }
 }
