--- a/package.json
+++ b/package.json
@@ -12,19 +12,23 @@
     "@reduxjs/toolkit": "^1.9.7",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "date-fns": "^2.30.0",
     "next": "14.0.1",
     "next-reveal": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.0",
     "react-photo-album": "^2.3.0",
     "react-player": "^2.13.0",
     "react-redux": "^8.1.3",
     "react-tweet": "^3.1.1",
+    "remark-gfm": "^4.0.0",
     "smooth-scrollbar": "^8.8.4",
     "usehooks-ts": "^2.9.1",
     "yet-another-react-lightbox": "^3.15.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/aos": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
