--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "date-fns": "^2.30.0",
+    "mongoose": "^8.0.0",
     "next": "14.0.1",
     "next-reveal": "^1.0.6",
     "react": "^18",
