--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^8.0.0",
     "next": "14.0.1",
     "next-reveal": "^1.0.6",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.0",
@@ -33,6 +34,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/aos": "^3.0.6",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/scrollreveal": "^0.0.10",
