--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-redux": "^8.1.3",
     "react-tweet": "^3.1.1",
     "remark-gfm": "^4.0.0",
+    "sharp": "^0.32.6",
     "smooth-scrollbar": "^8.8.4",
     "usehooks-ts": "^2.9.1",
     "yet-another-react-lightbox": "^3.15.0"
