--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "react-photo-album": "^2.3.0",
     "react-player": "^2.13.0",
     "react-redux": "^8.1.3",
+    "react-transition-group": "^4.4.5",
     "react-tweet": "^3.1.1",
     "remark-gfm": "^4.0.0",
     "sharp": "^0.32.6",
     "smooth-scrollbar": "^8.8.4",
+    "tailwind-merge": "^2.1.0",
     "usehooks-ts": "^2.9.1",
     "yet-another-react-lightbox": "^3.15.0"
   },
@@ -38,6 +40,7 @@
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-transition-group": "^4.4.10",
     "@types/scrollreveal": "^0.0.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
